ajueste de limites da pagina

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -34,7 +34,7 @@
       <li> <a rel="noopener" href="https://ionic.io/ionicons" target="_blank">Ícones</a></li>
     </ul>
     <div id="social-links">
-      <a href="#" target="_blank">
+      <a rel="noopener" href="https://github.com/lfsds711/primeiro-projeto" target="_blank">
       <ion-icon name="logo-github"></ion-icon>
     </a>
     <a rel="noopener" href="https://www.instagram.com/lfs_draw/" target="_blank">
