--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -26,7 +26,7 @@
         </span>
       </div>
     <ul>
-      <li> <a rel="noopener" href="https://app.rocketseat.com.br/discover/"\target="_blank">Curso DEV</a> </li>
+      <li> <a rel="noopener" href="https://app.rocketseat.com.br/discover/" target="_blank">Curso DEV</a> </li>
       <li> <a rel="noopener" href="https://chat.openai.com/?model=text-davinci-002-render-sha" target="_blank">ChatGPT</a></li>
       <li> <a rel="noopener" href="https://www.figma.com/" target="_blank">Figma para Design</a></li>
       <li> <a rel="noopener" href="https://www.w3schools.com/" target="_blank">CSS para Estudo</a></li>
