--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -14,15 +14,15 @@
   <body>
     <div id="container">
     <div id="profile"> 
-      <img src="./assets/FOTO DE OCLIN DO PAI.png" alt="foto perfil luiz"/>
+      <img src="./assets/avatar-light.png" alt="foto perfil luiz"/>
       <p>Primeiro Projeto</p> 
     </div> 
-      <div id="swith" onclick= "togglemode()">
+      <div id="swith" onclick="toggleMode()">
         <button>
-          
-        </button>
-        <span>
 
+        </button> 
+        <span>
+          
         </span>
       </div>
     <ul>
@@ -51,10 +51,9 @@
 </div>
     </div>
 
-    </button>
+  <button>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
 
     <script src="script.js"></script>
   </body>
