--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -49,8 +49,8 @@
     </div>
     <footer> Feito por <a rel="noopener" href="https://www.instagram.com/luiz.s0uza/" target="_blank"> Luiz</a></footer>
 </div>
-    </div>
-
+    </div>]
+    
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
